--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
             class="linkedin"
             ><i class="bi bi-linkedin"></i
           ></a>
+
+   <a
+            href="https://t.me/Bixapb"
+            class="linkedin"
+            ><i class="bi bi-telegram"></i
+          ></a>
+          
         </div>
       </div>
     </header>
